# AI-in-Cybersecurity-Auditing-and-Compliance-Monitoring

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  prompt.md  pyproject.toml  refactor.ipynb  requirements.txt  task.md
configs/: defaults.yaml  embeddings.yaml  eval.yaml  hybrid.yaml  predict_hybrid.yaml  rules.yaml  tfidf.yaml
data/processed/: artifacts_with_split.csv  control_rationales.json  controls_enhanced.csv  feedback.csv
data/raw/: artifacts.csv  controls (1).csv  controls.csv  feedback.csv  round_feedback_full.csv  round_feedback_observations.csv
eval/tables/: family_metrics.csv  metrics.csv  metrics_embed_rules.csv  metrics_embeddings.csv  metrics_hybrid.csv  metrics_tfidf.csv  metrics_tfidf_rules.csv  model_comparison.csv
models/bi_encoder/: Information-Retrieval_evaluation_dev_mrr_results.csv  README.md  config_sentence_transformers.json
models/cardinality/: feature_spec.json
models/cross_encoder/: README.md
models/cross_encoder_v2/: README.md
models/embeddings/: emb_index.pkl
models/tfidf/: tfidf_index.pkl
notebooks/: 01_data_prep_and_splits.ipynb  01_explore_data.ipynb  02_build_pairs_hard_negatives.ipynb  02_tfidf_baseline.ipynb  03_compare_models.ipynb  03_feedback_effects.ipynb  03_train_bi_encoder.ipynb  04_train_cross_encoder_and_calibrate.ipynb  05_train_cardinality_autok.ipynb  06_predict_unified_pipeline.ipynb  07_evaluate_and_ablations.ipynb  08_feedback_evaluation.ipynb  09_feedback_finetuning.ipynb
outputs/predictions/: test.csv
scripts/: run_comparison.sh
src/cli/: __init__.py  build_index.py  (+3 more)
(+24 files in other folders)
